This this the changelog file for the Pothos C++ library.

Release 0.4.1 (pending)
==========================

- Bump activity indicator for slots and de/activate

Release 0.4.0 (2016-08-02)
==========================

Deprecated Framework API calls:

- Deprecated OutputPort::popBytes, use popElements

New Framework API calls:

- Added OutputPort::setReserve function call
- Added OutputPort::popElements function call
- Added OutputPort::getBuffer function call
- Added InputPort::peekMessage function call
- Added BlockRegistry::make block proxy factory
- Added Block::emitSignal to replace callVoid
- Added DType::fromDType factory method
- Added BufferChunk::convert into a specified buffer

General additions and changes:

- Added set, get, and function call operator to Proxy
- Support global variables in JSON Topology description
- BufferChunk management of multiple buffer references
- Moved EvalEnvironment interface into public headers
- Library fixes to support compilation on FreeBSD systems
- Use default debug log level for plugin registry events
- Allow for plugin module re-initialization after deinit()
- Fixed weak storage of plugin's associated module object
- Updated the internal Poco submodule to version 1.7.4

Release 0.3.3 (2016-05-10)
==========================

- Added conversion for proxy vector to/from numeric matrix
- Switch to getWildcardAddr() in logger for portability
- Fix Poco in-tree build support, was missing Poco_FOUND
- Updated muparserx submodule, contains various fixes
- CMake POTHOS_SOVER variable cache fix use INTERNAL type
- Proxy server sets unbuffered on descriptors for printf() users

Release 0.3.2 (2016-03-06)
==========================

- Use current DLL path to determine the system install root
- Fixes for POTHOS_MODULE_UTIL destination and install prefix
- Added conversions between ObjectMap and ObjectKwargs
- Added CMake ENABLE_* flags for internal dependencies

Release 0.3.1 (2016-01-01)
==========================
